corrected project properties with wildcard

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,17 +29,17 @@ dist.jar=${dist.dir}/TexasTorque2015.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.NetworkTables-sources.jar=C:\\Users\\Gijs\\wpilib\\java\\current\\lib\\NetworkTables-sources.jar
-file.reference.NetworkTables.jar=C:\\Users\\Gijs\\wpilib\\java\\current\\lib\\NetworkTables.jar
-file.reference.WPILib-sources.jar=C:\\Users\\Gijs\\wpilib\\java\\current\\lib\\WPILib-sources.jar
-file.reference.WPILib.jar=C:\\Users\\Gijs\\wpilib\\java\\current\\lib\\WPILib.jar
+file.reference.NetworkTables-sources.jar-1=C:\\Users\\*\\wpilib\\java\\current\\lib\\NetworkTables-sources.jar
+file.reference.NetworkTables.jar-1=C:\\Users\\*\\wpilib\\java\\current\\lib\\NetworkTables.jar
+file.reference.WPILib-sources.jar-1=C:\\Users\\*\\wpilib\\java\\current\\lib\\WPILib-sources.jar
+file.reference.WPILib.jar-1=C:\\Users\\*\\wpilib\\java\\current\\lib\\WPILib.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.NetworkTables-sources.jar}:\
-    ${file.reference.NetworkTables.jar}:\
-    ${file.reference.WPILib-sources.jar}:\
-    ${file.reference.WPILib.jar}
+    ${file.reference.NetworkTables-sources.jar-1}:\
+    ${file.reference.NetworkTables.jar-1}:\
+    ${file.reference.WPILib-sources.jar-1}:\
+    ${file.reference.WPILib.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
