If this doesnt work just only ever add src/

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,10 +36,10 @@ file.reference.WPILib.jar-1=C:\\Users\\*\\wpilib\\java\\current\\lib\\WPILib.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.NetworkTables-sources.jar-1}:\
-    ${file.reference.NetworkTables.jar-1}:\
-    ${file.reference.WPILib-sources.jar-1}:\
-    ${file.reference.WPILib.jar-1}
+    ${file.reference.NetworkTables-sources.jar}:\
+    ${file.reference.NetworkTables.jar}:\
+    ${file.reference.WPILib-sources.jar}:\
+    ${file.reference.WPILib.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
